--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
 
 
     <!-- Preferences -->
+    <string name="settings_environment">Settings environment</string>
+    <string name="number_of_consecutive_tests">Number of consecutive tests</string>
     <string name="observer_address_title">Observer address</string>
     <string name="aggregator_address_title">Aggregator</string>
 
