--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,6 @@
 
     <string name="title_activity_rtt">Results-Rtt</string>
     <string name="title_activity_bandwidth">Results-Bandwidth</string>
-    <string name="title_activity_bandwidth_graph">Results-BandwidthTCPGraph</string>
 
     <!-- Button next level of detail in Band TCP-->
     <string name="tcp_bandwidth_graphic">SHOW DIAGRAM</string>
@@ -24,10 +23,7 @@
     <string name="tcp_bandwidth_less">SEE LESS</string>
 
 
-
     <!-- Preference Titles -->
-    <string name="messages_header">Addresses</string>
-    <string name="sync_header">Sync</string>
     <string name="messages_UDP_header">UDP-preferences</string>
     <string name="messages_TCP_header">TCP-preferences</string>
 
@@ -35,19 +31,18 @@
     <!-- Preferences -->
     <string name="settings_environment">Settings environment</string>
     <string name="number_of_consecutive_tests">Number of consecutive tests</string>
-    <string name="observer_address_title">Observer address</string>
+    <string name="observer_address_title">Edge address</string>
     <string name="aggregator_address_title">Aggregator</string>
+    <string name="direction">Direction</string>
 
-    <string name="pack_size_RTT_title">Package size in RTT</string>
-    <string name="pack_size_BANDWIDTH_title">Package size in BANDWIDTH</string>
+    <string name="pack_size_RTT_title">Packet size in RTT</string>
+    <string name="pack_size_BANDWIDTH_title">Packet size in BANDWIDTH</string>
 
-    <string name="num_pack_BANDWIDTH_title">Numbers of package in BANDWIDTH</string>
-    <string name="num_pack_RTT_title">Numbers of package in RTT</string>
-
+    <string name="num_pack_BANDWIDTH_title">Number of packets in BANDWIDTH</string>
+    <string name="num_pack_RTT_title">Number of packets in RTT</string>
 
 
     <string name="tcp_bandwidth">TCP Bandwidth</string>
-    <string name="result">Result</string>
     <string name="functionalities">Direction</string>
     <string name="udp_bandwidth">UDP Bandwidth</string>
     <string name="tcp_rtt">TCP RTT</string>
